# pgproxy

./: .env.local  Cargo.toml  Dockerfile
local-certs/ca/: ca.crt  ca.key  ca.srl  gen.sh
local-certs/server/: gen.sh  key.pem  server.crt  server.csr  server_ext.cnf
src/: client.rs  main.rs  pg.rs  pgclient.rs  proxy.rs  tls.rs
