[package]
name = "pgproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
structopt = "0.3.26"
http = "1.1.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
pingora = { version = "0.4.0", features = [
  "lb",
  "pingora-cache",
  "pingora-load-balancing",
  "pingora-proxy",
  "proxy"
], default-features = false }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
# pgwire = { version = "0.28.0", features = ["server-api", "client-api", "_ring"]}
tokio-rustls = "0.24"
rustls-pemfile = "1"
rustls-pki-types = { version = "1.10" }
uuid = { version = "1.9.1", features = ["v4"] }
once_cell = "1.19.0"
futures = "0.3.30"
prometheus = "0.13.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "json",
  "env-filter",
  "std",
] }
bytes = "1.9.0"
pgwire = "0.28.0"
tokio-util = { version = "0.7.3", features = ["codec", "io"] }


[target.'cfg(not(target_os = "macos"))'.dependencies.pingora]
version = "0.4.0"
default-features = false
features = ["openssl"]

[target.'cfg(target_os = "macos")'.dependencies.pingora]
version = "0.4.0"
default-features = false
features = ["boringssl"]
