[package]
name = "pgproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
structopt = "0.3.26"
http = "1.1.0"
dotenv = "0.15.0"
pingora = { version = "0.4.0", features = [
  "rustls"
], default-features = false }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["v4"] }
once_cell = "1.19.0"
futures = "0.3.30"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "json",
  "env-filter",
  "std",
] }
bytes = "1.9.0"
pgwire = {version="0.28.0"}
pin-project = { version = "1.1" }
tokio-util = { version = "0.7.3", features = ["codec", "io"] }




